[tool.poetry]
name = "steve"
version = "0.1.0"
description = "A Discord Bot that knows everything about Minecraft!"
authors = ["Pratish <pratishrai724@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
discord = "^2.0.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
psutil = "^5.9.2"
topggpy = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
